--- a/options.yml
+++ b/options.yml
@@ -39,7 +39,7 @@ options:
     enabled: ai-ox-tethers.oxtethers.enabled
 
   - name: group_dynamic
-    text: Instead of a fixed maximum of 3 ox tethers per quarry, the options below allow more ox tether per quarry.
+    text: Instead of a fixed maximum of 3 ox tethers per quarry, the options below allows more ox tethers per quarry.
     header: Dynamic logic
     enabled: ai-ox-tethers.oxtethers.logic.dynamic
     display: GroupBox
@@ -52,42 +52,24 @@ options:
       enabled: ai-ox-tethers.oxtethers.enabled
       contents:
         value: true
-    - name: element5
-      text: >-
-        Set the threshold for determining if a quarry needs an extra ox tether (a lower value means more ox tethers and
-        quicker placement of extra ox tethers).
+    - name: elementparagraph1
+      display: Paragraph
+      text:  >-
+        Every few ticks, each AI checks whether to build an ox tether.
+        The vanilla game checks which quarry has too many stones in its pile compared to the amount of ox tethers that were built for it.
+        In vanilla, the maximum of linked ox tethers is hardcoded to 3.
+        Furthermore, the threshold is set to 20 stones per ox tether.
+        The maximum amount of stones a quarry's pile can have is 48.
+        Thus, in vanilla, if a quarry has more than 40 stones and two ox tethers, another tether will be built.
+        But, that will be the last ox tether that will be built for that quarry.
 
 
-        For example, if the threshold is 20, and there is a quarry
-        with 2 workers taking stones from that quarry and 41 stones are in the quarry's stockpile.
-        Then, as 41 is over the threshold of 20 per worker, an extra ox tether is built for that quarry.
-
-
-        The vanilla value is 20, and the max detected workers per quarry was 3, leading to a max of
-        3 ox tether per quarry.
-
-
-        Set the stone count threshold for determining if a quarry needs an extra ox tether
-      display: Number
-      url: ai-ox-tethers.oxtethers.parameters.thresholdStoneLoad
-      contents:
-        value: 20
-        min: 1
-        max: 48
-        step: 1
-      enabled: ai-ox-tethers.oxtethers.logic.dynamic
-    - name: element4
-      text: Build at most this many ox tethers per quarry, depending on how full the pile is. Value should be higher than the minimum.
-      display: Number
-      url: ai-ox-tethers.oxtethers.parameters.maximumOxTethersPerQuarry
-      contents:
-        value: 6
-        min: 0
-        max: 2000
-        step: 1
-      enabled: ai-ox-tethers.oxtethers.logic.dynamic
+        Dynamic logic removes this limit of 3 ox tethers per quarry, and introduces "linked ox tethers", which means "ox tethers that took stones from a quarry".
+        
+        
+        To avoid the AI from spamming ox tethers, some parameters have to be defined.
     - name: element1
-      text: Upper limit of amount of ox tethers for a player regardless of the quarry count.
+      text: The total amount of ox tethers for this player will never go above this value.
       display: Number
       url: ai-ox-tethers.oxtethers.parameters.maxOxTethers
       enabled: ai-ox-tethers.oxtethers.logic.dynamic
@@ -97,8 +79,7 @@ options:
         max: 2000
         step: 1
     - name: element2
-      text: If not over the upper limit, the max amount of ox tethers per player will be the amount of quarries of a player multiplied by this value. For example, if 3, then
-        the AI will build max 3 ox tethers per quarry it has.
+      text: The total amount of ox tethers for this player will never go above this value multiplied by the amount of quarries.
       display: Number
       url: ai-ox-tethers.oxtethers.parameters.dynamicMaxOxTethers
       enabled: ai-ox-tethers.oxtethers.logic.dynamic
@@ -107,14 +88,34 @@ options:
         min: 0
         max: 2000
         step: 1
+    - name: element4
+      text: If the amount of linked ox tethers for a quarry is higher than this value, no ox tether is built for this quarry.
+      display: Number
+      url: ai-ox-tethers.oxtethers.parameters.maximumOxTethersPerQuarry
+      contents:
+        value: 6
+        min: 0
+        max: 2000
+        step: 1
+      enabled: ai-ox-tethers.oxtethers.logic.dynamic
     - name: element3
-      text: Build at least this many ox tethers per quarry, regardless of how full its stone stockpile is.
+      text: If the amount of linked ox tethers for a quarry is lower than this value, an ox tether will be built for this quarry.
       display: Number
       url: ai-ox-tethers.oxtethers.parameters.minimumOxTethersPerQuarry
       contents:
         value: 1
         min: 0
         max: 2000
+        step: 1
+      enabled: ai-ox-tethers.oxtethers.logic.dynamic
+    - name: element5
+      text: If `stones / linked ox tethers` goes above this value for a quarry, another ox tether is built for that quarry.
+      display: Number
+      url: ai-ox-tethers.oxtethers.parameters.thresholdStoneLoad
+      contents:
+        value: 20
+        min: 1
+        max: 48
         step: 1
       enabled: ai-ox-tethers.oxtethers.logic.dynamic
   - name: group_advanced
